Added a landing page to the core storybook

--- a/packages/core/storybook/.config/preview-head.html
+++ b/packages/core/storybook/.config/preview-head.html
@@ -1,1 +1,14 @@
-<style>body {padding: 10px}</style>
+<style>
+  body {
+    padding: 10px
+  }
+  html, body, #root {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    height: "100%";
+    width: "100%";
+  }
+</style>
