--- a/packages/example/public/index.html
+++ b/packages/example/public/index.html
@@ -8,12 +8,12 @@
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css">
-  <title>React App</title>
+  <title>React Formilicious Example</title>
 </head>
 
 <body>
   <noscript>
-    You need to enable JavaScript to run this app.
+    You need to enable JavaScript to run this example.
   </noscript>
   <div id="root"></div>
 </body>
